[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pretrained-backbones-unet"
version = "0.0.1"
authors = [
  { name = "Wisnu Aryo", email = "wisnu@example.com" },
]
description = "Pretrained backbones for Unet"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
dynamic = ["dependencies"]  # <== Penting!
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Wisnuaryo8/pretrained-backbones-unet"
Bug Tracker = "https://github.com/Wisnuaryo8/pretrained-backbones-unet/issues"

[tool.setuptools]
include-package-data = true
